--- a/local_planners/cfg/carlike/teb_local_planner_params.yaml
+++ b/local_planners/cfg/carlike/teb_local_planner_params.yaml
@@ -5,7 +5,7 @@ TebLocalPlannerROS:
  # Trajectory
   
  teb_autosize: True
- dt_ref: 0.3
+ dt_ref: 0.2
  dt_hysteresis: 0.1
  max_samples: 500
  global_plan_overwrite_orientation: True
@@ -19,11 +19,11 @@ TebLocalPlannerROS:
     
  # Robot
          
- max_vel_x: 0.4
+ max_vel_x: 1.0
  max_vel_x_backwards: 0.2
  max_vel_y: 0.0
  max_vel_theta: 0.3 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
- acc_lim_x: 0.5
+ acc_lim_x: 1.0
  acc_lim_theta: 0.5
 
  # ********************** Carlike robot parameters ********************
@@ -67,10 +67,10 @@ TebLocalPlannerROS:
 
  # Optimization
     
- no_inner_iterations: 5
- no_outer_iterations: 4
+ no_inner_iterations: 4
+ no_outer_iterations: 3
  optimization_activate: True
- optimization_verbose: False
+ optimization_verbose: True
  penalty_epsilon: 0.1
  obstacle_cost_exponent: 4
  weight_max_vel_x: 2
@@ -93,7 +93,7 @@ TebLocalPlannerROS:
 
  enable_homotopy_class_planning: True
  enable_multithreading: True
- max_number_classes: 4
+ max_number_classes: 2
  selection_cost_hysteresis: 1.0
  selection_prefer_initial_plan: 0.95
  selection_obst_cost_scale: 1.0
