--- a/reachability/.vscode/settings.json
+++ b/reachability/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/bin/python3.6"
+    "python.pythonPath": "C:\\Users\\Nathan\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe"
 }
