finished v0 mpc_sim node, reworked mpc messages, fixed import clarity, added rospy.init_node statements

--- a/osuf1_common/CMakeLists.txt
+++ b/osuf1_common/CMakeLists.txt
@@ -42,8 +42,8 @@ add_message_files(
   DIRECTORY msg
   FILES
   MPC_metadata.msg
-  Float1d.msg
-  StampedFloat2d.msg
+  MPC_prediction.msg
+  MPC_trajectory.msg
 )
 
 
