--- a/nonlinear_mpc_casadi/params/mpc_params.yaml
+++ b/nonlinear_mpc_casadi/params/mpc_params.yaml
@@ -1,34 +1,42 @@
 # Parameter for MPC solver
 dT: 0.2 #unit: s
 mpc_steps_N: 20
-max_speed: 3.0 # unit: m/s
 vehicle_L: 0.325 # distance between the front of the vehicle and its center of gravity
-ipopt_verbose: False
+
+max_speed: 2.0 # unit: m/s
 mpc_ref_cte: 0.0
 mpc_ref_epsi: 0.0
-mpc_ref_vel: 3.0
+mpc_ref_vel: 2.0
 
 mpc_w_cte: 2500
-mpc_w_epsi: 2500
-mpc_w_vel: 5.0
-mpc_w_delta: 10
-mpc_w_accel: 40
-mpc_w_accel_d: 20
-mpc_w_delta_d: 80
+mpc_w_lag: 750
+mpc_w_vel: 0.75
+mpc_w_p: 5
+mpc_w_delta: 50
+mpc_w_accel: 4
+mpc_w_delta_d: 40
+mpc_w_delta_p: 0
 
 mpc_max_steering: 0.523 # Maximal steering radian (~30 deg)
 mpc_max_throttle: 1.0 # Maximal throttle accel
 mpc_bound_value: 1.0e3 # Bound value for other variables
 
+p_max: 3.0
+d_v_bound: 2.0
+d_theta_bound: 0.5
+d_p_bound: 2.0
+
 # Parameters for control loop
 debug_mode: True
-delay_mode: False
-local_path_length: 1.8 # unit: m
-waypoints_fov: 2.09
+delay_mode: True
+car_width: 0.3
 spline_poly_order: 3
 goal_threshold: 0.2 # unit: m
 controller_freq: 20
-
+path_folder_name: kelley
+inflation_factor: 0.75
+lag_time: 0.1
+ipopt_verbose: True
 #Frame names
 car_frame: base_link
 
