working reach viz

--- a/osuf1_common/CMakeLists.txt
+++ b/osuf1_common/CMakeLists.txt
@@ -44,6 +44,9 @@ add_message_files(
   MPC_metadata.msg
   MPC_prediction.msg
   MPC_trajectory.msg
+  NPoint.msg
+  NPointSet.msg
+  ReachSets.msg
 )
 
 
