--- a/reachability/config/hylaa.yaml
+++ b/reachability/config/hylaa.yaml
@@ -2,7 +2,7 @@ mpc_prediction_topic: mpc_prediction
 mpc_metadata_topic: mpc_metadata
 reach_pub_topic: hylaa_reach
 graph_predictions: True
-display_type: IMAGE #NONE IMAGE VIDEO
+display_type: NONE #NONE IMAGE VIDEO
 display_filename: /home/nvidia/hylaa.png
 output_verbosity: NONE
 
