--- a/reachability/config/quickzono.yaml
+++ b/reachability/config/quickzono.yaml
@@ -6,6 +6,7 @@ display_type: NONE #NONE IMAGE VIDEO
 display_filename: /home/nvidia/quickzono.png
 output_verbosity: NONE
 horizon: 0
+runtime_mode: "CPU" #CPU, CPU_MP, GPU_DUMMY, GPU_HYBRID
 
 state_uncertainty:
   px: .1
