--- a/reachability/config/quickzono.yaml
+++ b/reachability/config/quickzono.yaml
@@ -1,12 +1,12 @@
-mpc_prediction_topic: car1_30m/mpc_prediction
-mpc_metadata_topic: car1_30m/mpc_metadata
+mpc_prediction_topic: mpc_prediction
+mpc_metadata_topic: mpc_metadata
 reach_pub_topic: hylaa_reach
 graph_predictions: True
 display_type: NONE #NONE IMAGE VIDEO
 display_filename: /home/nvidia/quickzono.png
 output_verbosity: NONE
-horizon: 0
-runtime_mode: "CPU" #CPU, CPU_MP, GPU_DUMMY, GPU_HYBRID
+horizon: 0.5
+runtime_mode: "CPU_MP" #CPU, CPU_MP, GPU_DUMMY, GPU_HYBRID
 
 state_uncertainty:
   px: .1
